@@ -123,6 +123,8 @@ Core and builtins
 Library
 -------
 
+- Patch #1643874: memory leak in ctypes fixed.
+
 - Patch #1627441: close sockets properly in urllib2.
 
 - Bug #494589: make ntpath.expandvars behave according to its docstring.
